--- a/angular.json
+++ b/angular.json
@@ -48,6 +48,10 @@
                   "maximumError": "4kb"
                 }
               ],
+              "fileReplacements": [{
+                "replace": "src/environments/environment.ts",
+                "with": "src/environments/environment.prod.ts"
+              }],
               "outputHashing": "all"
             },
             "development": {
@@ -96,5 +100,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "6f6b5dfd-91ae-45d8-be6a-08da8579ed1e"
   }
 }
